# mylibrary

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: conf.py
src/mylibrary/: mylibrary.py
