[tool.poetry]
name = "mylibrary"
version = "0.0.0"
description = "Example of how to use templates in cookiecutter."
authors = ["Hermine Delamaire"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev-dependencies]
python-semantic-release= "^9.8.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
version_toml = [
"pyproject.toml:tool.poetry.version",
]
